Corrected the layout issues for the landing page.

--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,6 +1,7 @@
 .about-us-container {
-    width: 1000px;
-    /* margin: 0 auto; */
+    max-width: 1000px;
+    width: 90%;
+    margin: 0 auto; 
     /* padding: 20px; */
     /* background-color: red; */
     text-align: justify;
@@ -11,6 +12,7 @@
     font-weight: bold;
     color: #333;
     margin-bottom: 20px;
+    margin-right: auto;
   }
   
   .about-us-description {
@@ -18,11 +20,13 @@
     color: #666;
     margin-bottom: 30px;
     text-align: center;
+    margin-right: auto;
   }
   
   .about-us-content {
     font-size: 18px;
     margin-bottom: 20px;
+    margin-right: auto;
   }
   .plant_logo_right{
     text-align: right;
